--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@eslint/js": "^9.16.0",
+    "@mermaid-js/mermaid-cli": "^11.4.2",
     "@types/color-rgba": "^2.1.3",
     "@types/lodash.range": "^3.2.9",
     "@types/lodash.times": "^4.3.9",
