--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   },
   "dependencies": {
     "@eslint/js": "^9.16.0",
-    "@mermaid-js/mermaid-cli": "^11.4.2",
     "@types/color-rgba": "^2.1.3",
     "@types/lodash.range": "^3.2.9",
     "@types/lodash.times": "^4.3.9",
@@ -36,5 +35,8 @@
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.16.0"
+  },
+  "optionalDependencies": {
+    "@mermaid-js/mermaid-cli": "^11.4.2"
   }
 }
