--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "tsx advent.ts test",
     "real": "tsx advent.ts real",
-    "format": "prettier --write \"**/*.{ts,json,md,yml}\"",
+    "format": "prettier --write \"**/*.{ts,json,md,yml}\" --log-level error",
     "lint": "eslint --flag unstable_ts_config --fix \"**/*.ts\""
   },
   "license": "ISC",
