Update Run Checka action to use npm ci instead

--- a/.github/workflows/run-checks.yml
+++ b/.github/workflows/run-checks.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: "22.x"
 
-      - run: npm install
+      - run: npm ci
       - run: npm run format
       - run: npm run lint
 
