--- a/prettier-plugin-advent/package.json
+++ b/prettier-plugin-advent/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "main": "target/plugin.js",
   "scripts": {
-    "build": "esbuild src/plugin.ts --bundle --platform=node --outdir=target/ --log-level=error"
+    "esbuild": "\"$(npm ls esbuild-wasm --parseable)/bin/esbuild\"",
+    "build": "npm run --script-shell sh esbuild -- src/plugin.ts --bundle --platform=node --outdir=target/ --log-level=error"
   },
   "devDependencies": {
     "esbuild-wasm": "^0.27.0",
